TestSuite/errors/err0161.pas
procedure Test(a : integer);
begin
var a : integer;
end;

begin

end.